<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yuzuko Tokei</string>
    <string name="app_description">I tell you the time signal!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="service_started">Yuzuko Tokei started.</string>
    <string name="service_stopped">Yuzuko Tokei stopped.</string>
    <string name="enable">Enable</string>
    <string name="testplay">Voice test</string>
    <string name="preferences">Settings</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="support_url" translatable="false">http://orleaf.net</string>
    <string name="button_min_ems">8</string>
    <string name="media_volume_zero">Please increase Media volume to play voice.</string>
    <string name="pref_title">Settings</string>
    <string name="pref_enable_title">Speech</string>
    <string name="pref_vibrate_title">Vibrate</string>
    <string name="pref_vibrate_summary">Notify with vibration.</string>
    <string name="pref_period_title">Period</string>
    <string name="pref_hours_title">Hours</string>
    <string name="pref_hours_summary">Specify speech time.</string>
    <string name="pref_hours_suffix">o\'clock</string>
    <string name="pref_volume_title">Volume</string>
    <string name="pref_volume_summary">Adjust speech volume.</string>
    <string name="pref_volume_silent">Mute on silent mode</string>
    <string name="pref_notificationicon_title">Show Notification Icon</string>
    <string name="pref_notificationicon_summary">Show icon on status bar.</string>
    <string name="period_eachhour">every hour</string>
    <string name="period_each30min">every 30 min.</string>

</resources>