<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enabled"
        android:title="@string/pref_enable_title" />

    <PreferenceCategory android:title="@string/preferences" >
        <ListPreference
            android:defaultValue="0"
            android:dependency="enabled"
            android:entries="@array/entries_period"
            android:entryValues="@array/entryvalues_period"
            android:key="period"
            android:title="@string/pref_period_title" />

        <net.assemble.yclock.preferences.YclockHoursPreference
            android:dependency="enabled"
            android:key="hours"
            android:persistent="false"
            android:summary="@string/pref_hours_summary"
            android:title="@string/pref_hours_title" />

        <net.assemble.yclock.preferences.YclockVolumePreference
            android:defaultValue="4"
            android:dependency="enabled"
            android:key="volume"
            android:summary="@string/pref_volume_summary"
            android:title="@string/pref_volume_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enabled"
            android:key="vibrate"
            android:summary="@string/pref_vibrate_summary"
            android:title="@string/pref_vibrate_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enabled"
            android:key="notification_icon"
            android:summary="@string/pref_notificationicon_summary"
            android:title="@string/pref_notificationicon_title" />

        <Preference
            android:dependency="enabled"
            android:key="test"
            android:title="@string/testplay" />
    </PreferenceCategory>

</PreferenceScreen>